# librepods-windows

./: Cargo.toml  README
src/: apple_cp.rs  main.rs  main_old.rs  main_v2.rs
src/airpod/: airpods.rs  battery.rs  mod.rs  model.rs  side.rs
src/airpod/packet/: battery.rs  color.rs  flags.rs  header.rs  lid.rs  mod.rs  packet_type.rs
