[package]
name = "librepods-windows"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
widestring = "1.2.1"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_System",
  "Win32_System_LibraryLoader",
  "Win32_UI",
  "Win32_Graphics_Gdi",
  "Win32_Media",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Devices",
  "Win32_Devices_Bluetooth",
  "Win32_UI_Shell_PropertiesSystem",
  "Devices_Enumeration",
  "Devices_Bluetooth",
  "Devices_Bluetooth_GenericAttributeProfile",
  "Devices_Bluetooth_Advertisement",
  "Win32_System_Variant",
  "Win32_Devices_FunctionDiscovery",
  "Storage",
  "Storage_Streams",
  "Win32_Devices_Properties",
] }
windows-core = "0.62.2"
